...
    <string name="endgame_replay">Replay</string>
    <string name="endgame_seed" fomatted="false">Seed: %s (tap to copy)</string>

    <!-- Seed Dialog -->
    <string name="seed_dialog_title">New game from seed</string>
    <string name="seed_dialog_edittext_prefix">Seed:</string>
    <string name="seed_dialog_start">Start</string>
    <string name="seed_dialog_cancel">Cancel</string>

    <!--Settings Activity-->
    <string name="settings_settings">Settings</string>
    <string name="settings_num_colors">Number of Colors</string>
    <string name="settings_board_size">Board Size</string>
    <string name="settings_apply_button">Apply</string>
...
